--- a/SignUp.html
+++ b/SignUp.html
@@ -35,7 +35,7 @@
         </div>
         <script type="module">
             import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js'
-            import { getAuth , createUserWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js'
+            import { getAuth , createUserWithEmailAndPassword , updateProfile } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js'
             import { getFirestore } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js'
             const firebaseConfig = {
                 apiKey: "AIzaSyD47bB5rv0nnbBxDQ6ideeEpkjaHbyjzeo",
@@ -55,12 +55,19 @@
             const app = initializeApp(firebaseConfig);
             
             const auth = getAuth(app)
+        
 
             const button = document.getElementsByClassName("btnSignUp")[0]
+
             button.addEventListener("click",()=>{
                 createUserWithEmailAndPassword(auth,email.value,password.value)
                 .then((userCred)=>{
-                    console.log(userCred);
+                    updateProfile(auth.currentUser,{
+                        displayName:userName.value
+                    })
+                    .then(()=>{
+                        console.log(auth.currentUser)
+                    })
                 })
             })
           </script>
